environments/prod/jellyfin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "tv.simonbrundin.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 8096
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
